# libldm
# Copyright 2012 Red Hat Inc.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

AM_CFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src test

#bin_PROGRAMS = partread ldmread
#
#partread_SOURCES = partread.c mbr.c mbr.h gpt.h gpt.c
#partread_LDADD = -lz -luuid
#
#ldmread_SOURCES = ldmread.c mbr.c mbr.h gpt.h gpt.c ldm.h ldm.c
#ldmread_LDADD = -lz -luuid $(GOBJECT_LIBS)
#ldmread_CFLAGS = $(CFLAGS) $(AM_CFLAGS) $(GOBJECT_CFLAGS)
